--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -145,6 +145,12 @@ development:
     # Application name that is printed to the mongodb logs upon establishing a
     # connection in server versions >= 3.4. Note that the name cannot exceed 128 bytes.
     # app_name: MyApplicationName
+
+production:
+  clients:
+    default:
+      uri: <%= ENV['MONGODB_URI'] %>
+
 test:
   clients:
     default:
